@@ -10,7 +10,7 @@ class ObservationsController < ApplicationController
 				:max => Observation.maximum(:barometer),
 				:min => Observation.minimum(:barometer)
 			},
-			:max => %w( hi_speed temp ).collect{|a| Observation.maximum a }.max
+			:max => %w( hi_speed temp humidity ).collect{|a| Observation.maximum a }.max
 		}
 		
     if Rails.env.production? and Observation.need_fetch? then
