@@ -16,3 +16,5 @@
     	:hover{ text-decoration: underline; }
 	}
 }
+
+#tooltip{ position: absolute; display: none; border: 1px solid #fdd; padding: 2px; background-color: #fee; }
