@@ -16,6 +16,7 @@
 		<%= metric_toggler 'hi_speed' %>
 		<%= metric_toggler 'temp' %>
 		<%= metric_toggler 'barometer' %>
+		<%= metric_toggler 'humidity' %>
 
 		<div class="clear"></div>
 	</form>
